--- a/index.html
+++ b/index.html
@@ -1,105 +1,37 @@
+<!doctype HTML>
 <html>
-
-<!-- Learn about this code on MDN: https://developer.mozilla.org/en-US/docs/Web/API/Geolocation_API -->
-
-<p><button onclick="geoFindMe()">Show my location</button></p>
-
-
-<div id="out"></div>
-
-
-</html>
-
-<style>
-
-body {
-  padding: 20px;
-  background-color:#ffffc9
-}
-
-p { margin : 0; }
-
-</style>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-<script>
-function geoFindMe() {
-  var output = document.getElementById("out");
-
-  if (!navigator.geolocation){
-    output.innerHTML = "<p>Geolocation is not supported by your browser</p>";
-    return;
-  }
-
-  function success(position) {
-    var latitude  = position.coords.latitude;
-    var longitude = position.coords.longitude;
-
-
-    output.innerHTML = '<p>Latitude is ' + latitude + '° <br>Longitude is ' + longitude + '°</p>';
-
-
- 	$.ajax({
-            type    : "POST",
-            crossDomain: true,
-
-            data    : { Latitude:latitude },      
-            datatype: 'json',
-            url     : "getLocation.php",            						
-            cache   : false,            
-            success : function(response)                
-            {
-		alert(response)
-            	if (response==0)
-				{	
-					/*error_id=0;
-					x.style.border = '1px solid #d3dbe3';
-					document.getElementById("div_OTPError").innerHTML='';
-					document.getElementById("div_OTPError").style.visibility = "hidden";*/
-
-					return true;
-				}
-				else
-				{	
-					/*error_id=parseInt(response);
-					x.style.border = '1px solid #ff6000';
-					document.getElementById("div_OTPError").innerHTML='Please enter valid OTP.';//getErrorMsg(error_id);
-					document.getElementById("div_OTPError").style.visibility = "visible";*/
-
-					return false;
-				}
-            }
-        });
-
-
+	<head>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	</head>
+	<body>
 	
-  //file = "getLocation.php?Latitude="+latitude+"Longitude="+longitude;
+	<p>Your Location: <span id="location"></span></p>
+	
+		<script>
+$(document).ready(function(){
+    if(navigator.geolocation){
+        navigator.geolocation.getCurrentPosition(showLocation);
+    }else{ 
+        $('#location').html('Geolocation is not supported by this browser.');
+    }
+});
 
-
-
-   //output.appendChild(file);
-  }
-
-
-
-  function error() {
-    output.innerHTML = "Unable to retrieve your location";
-  }
-
-  output.innerHTML = "<p>Locating…</p>";
-
-
-
-  navigator.geolocation.getCurrentPosition(success, error);
-
+function showLocation(position){
+    var latitude = position.coords.latitude;
+    var longitude = position.coords.longitude;
+    $.ajax({
+        type:'POST',
+        url:'getLocation.php',
+        data:'latitude='+latitude+'&longitude='+longitude,
+        success:function(msg){
+            if(msg){
+               $("#location").html(msg);
+            }else{
+                $("#location").html('Not Available');
+            }
+        }
+    });
 }
-
-
-
-
-
-
 </script>
-
-
-
+	</body>
+</html>
