--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 	
-	<p>Your Location: <span id="location"></span></p>
+	<p>Your Location2: <span id="location"></span></p>
 	
 		<script>
 $(document).ready(function(){
