--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-	<?php
+<body>
+<p>shishir</p>
+<?php
 
 $IPaddress=$_SERVER['REMOTE_ADDR'];
 echo $msg='';
@@ -36,5 +38,7 @@ exit;
 
 
 ?>
+</body>
+	
 
 </html>
