--- a/index.html
+++ b/index.html
@@ -1,43 +1,9 @@
 <html>
 <body>
-<p>shishir</p>
-<?php
+<form action="shishir.php">
+  <input type="submit" value="click on me!">
+</form>
 
-$IPaddress=$_SERVER['REMOTE_ADDR'];
-echo $msg='';
-echo $IPaddress; 
-
-
-//$geoIP  = json_decode(file_get_contents("http://freegeoip.net/json/$IPaddress"), true);
-
-//echo '<pre>'; print_r($geoIP); exit;
-
-$msg.="IPaddress: ".$IPaddress;
-//$msg.='lat: ' . $geoIP['latitude'] . '<br />';
-//$msg.='lat: ' . $geoIP['longitude'] . '<br />';
-
-
-$headers = "From: soumyachidambara@gmail.com\r\n";
-$headers .= "Reply-To: shishirpatil007@gmail.com\r\n";
-$headers .= "Return-Path: soumyachidambara@gmail.com\r\n";
-
-$to="shishirpatil007@gmail.com";
-$subject="Location";
-
-
-if ( mail($to,$subject,$msg,$headers) ) {
-   echo "The email has been sent!";
-   } else {
-   echo "The email has failed!";
-   }
-
-
-
-exit;
-
-
-
-?>
 </body>
 	
 
