--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-<form action="shishir.php">
-  <input type="submit" value="click on me!">
+<form action="shishir.php" method="post">
+ 
 </form>
 
 </body>
